# zkVault

./: .env.sample  .gitignore  Cargo.toml  README.md  README3.md
contract/: Cargo.toml
contract/src/: lib.rs  verifier.rs
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/eligibility/: route.ts
frontend/app/api/prove/: route.ts
frontend/components/: ClickProviderWrapper.tsx  ProcessLedger.tsx  RedactedBalanceField.tsx  WalletBar.tsx
frontend/lib/: casperDeploy.ts  config.ts  types.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
scripts/: build_all.sh  deploy_testnet.sh  submit_proof.sh
