[workspace]
resolver = "2"
members = ["methods", "host", "contract"]

# The guest crate is intentionally NOT a workspace member — it's built for the
# riscv32im-risc0-zkvm-elf target by risc0_build (invoked from methods/build.rs),
# which needs its own isolated target directory / toolchain.
exclude = ["methods/guest"]
