[package]
name = "zkvault-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
# Odra 2.x. Earlier drafts of this file pinned "1" -- current Odra
# tutorials (odra.dev/docs, mid-2026) show 2.2.0/2.3.1 as the live version.
# Re-check `cargo odra --version` / odra.dev/docs before deploy day.
odra = { version = "2", default-features = false }

# --- livenet-only tooling --------------------------------------------------
# Pulled in only with `--features livenet` (used by bin/check_eligibility.rs),
# so the wasm build never sees these.
odra-casper-livenet-env = { version = "2", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
odra-test = { version = "2", default-features = false }

[build-dependencies]
# Powers bin/build_contract.rs and bin/build_schema.rs -- this is current
# Odra 2.x's documented build path (see those files' doc comments for the
# one thing about this still worth verifying).
odra-build = { version = "2", default-features = false }

[features]
default = ["relayer-attested"]

# Demoable in 24h: a trusted off-chain relayer runs real RISC Zero receipt
# verification off-chain, then relays the result via its own signed Casper
# deploy. The contract trusts the *relayer's signature*, not the proof math
# directly. See README "Verification modes" for the honest tradeoff.
relayer-attested = []

# Stretch goal: real cryptographic verification inside the WASM contract
# itself (no relayer trust). Needs a no_std-compatible Groth16/BN254
# verifier wired up in src/verifier.rs -- see the TODO and links there.
onchain-groth16 = []

# Enables the read-only on-chain status check (used by the frontend's
# /api/eligibility route). Not needed for the wasm contract build itself.
livenet = ["odra-casper-livenet-env", "clap", "anyhow", "hex", "dotenvy"]

[[bin]]
name = "zkvault_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "zkvault_contract_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "check_eligibility"
path = "bin/check_eligibility.rs"
required-features = ["livenet"]
