[package]
name = "zkvault-host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2", default-features = false, features = ["std", "prove"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

# Note: this crate only PRODUCES the proof bundle (proof.json). Submission to
# the deployed Casper contract is handled separately by
# scripts/submit_proof.sh via the `casper-client` CLI, so the host stays
# decoupled from any specific Casper SDK version. See README.
