[package]
name = "zkvault-host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
# Keep in sync with methods/guest/Cargo.toml -- see the security note
# there (CVE-2025-61588: critical RCE fixed in risc0-zkvm 2.3.2/3.0.3+).
# Mismatched host/guest risc0 versions can also fail at verify time even
# if both individually compile.
risc0-zkvm = { version = "3", default-features = false, features = ["std", "prove"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "3.0"
sha2 = "0.11"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

# Note: this crate only PRODUCES the proof bundle (proof.json). Submission to
# the deployed Casper contract is handled separately by
# scripts/submit_proof.sh via the `casper-client` CLI, so the host stays
# decoupled from any specific Casper SDK version. See README.
