[package]
name = "zkvault-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[[bin]]
name = "zkvault_guest"
path = "src/main.rs"

# The guest binary is built for riscv32im-risc0-zkvm-elf, not your host
# architecture. risc0_build (called from methods/build.rs) handles this
# automatically — you should never `cargo build` this crate directly.
