[package]
name = "zkvault-guest"
version = "0.1.0"
edition = "2021"

# Required: tells Cargo this crate is its OWN workspace root, fully
# decoupled from the parent workspace. risc0_build::embed_methods() runs
# `cargo metadata` scoped to this directory, and without this empty
# [workspace] table that lookup walks up and collides with the parent
# Cargo.toml even though the parent excludes this path — you'll see
# "current package believes it's in a workspace when it's not" otherwise.
[workspace]

[dependencies]
# SECURITY: v1.2 had a disclosed critical RCE in risc0-zkvm-platform
# (CVE-2025-61588, sys_read memory-safety bug, CVSS 9.3) -- fixed in
# risc0-zkvm 2.3.2 / 3.0.3+. Pinning "3" here also matches the r0vm
# toolchain `rzup install` gives you today; a version mismatch between
# the r0vm binary and this crate is what causes "Malformed ProgramBinary"
# during the guest build. Keep these in sync if you ever change one.
risc0-zkvm = { version = "3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[[bin]]
name = "zkvault_guest"
path = "src/main.rs"

# The guest binary is built for riscv32im-risc0-zkvm-elf, not your host
# architecture. risc0_build (called from methods/build.rs) handles this
# automatically — you should never `cargo build` this crate directly.
